--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
+  "name": "Minesweeper",
+  "version": "1.0.0",
   "devDependencies": {
-    "gulp-browserify": "*",
-    "gulp-rename": "*",
-    "gulp-stylus": "*",
-    "gulp-plumber": "*",
-    "babel": "*",
-    "babelify": "*"
-  }
+    "gulp": "3.9.0",
+    "gulp-browserify": "0.5.1",
+    "gulp-rename": "1.2.2",
+    "gulp-stylus": "2.1.0",
+    "gulp-plumber": "1.0.1",
+    "babelify": "6.3.0",
+    "light-server": "1.1.0"
+  },
+  "scripts": {
+    "server": "gulp",
+    "dev": "gulp dev",
+    "start": "npm run server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PavelDymkov/minesweeper.git"
+  },
+  "license": "MIT"
 }
